modules/gdscript/tests/scripts/runtime/errors/use_return_value_of_void_builtin_method_call.gd
func test():
	var value
	value = []
	print(value.reverse())
